# backend

./: .env.template  .gitignore  Dockerfile  FIREBASE_DEPLOYMENT.md  README.md  docker-compose.yml  firestore.indexes.json  firestore.rules  pyproject.toml  requirements.txt  storage.rules
.claude/: backend_execution_plan.al  execution_state.md  phase1_foundation.al  phase1_questions.md  phase2_audio_processing.al  phase2_questions.md  phase2_questions_answers.md  phase3_ai_system.al  phase3_questions.md  phase4_output_management.al  phase4_questions.md
.github/workflows/: ci.yml
app/: dependencies.py  main.py
artifacts/: 0_firestore_content_schema.md  0_mvp_tech_stack.md  0_semantic_requirements.md  1_fastapi_project_structure.md  1_graph_approaches.json  1_markdown_storage_design.md  2_firestore_data_models.md  2_graph_design.md  2_version_tracking_system.md  3_agent_architecture.md  3_neo4j_graph_schema.md  3_sequential_chapter_workflow.md  4_agent_tools.py  4_api_endpoint_design.md  4_markdown_validation_service.md  5_background_task_system.md  5_chat_interface_design.md  5_processing_pipeline.md  6_config_logging_setup.md  6_html_conversion_pipeline.md  7_ai_test.json  7_docker_deployment_config.md  7_pandoc_template_system.md  8_chunked_upload_handler.md  8_integration_simulation.json  8_ui_marketplace_design.md  9_manual_publishing_workflow.md  phase4_execution_state.md  requirements.txt  requirements_minimal.txt
mvp_foundation_implementation/: Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
tests/: test_upload_service.py
(+59 files in other folders)
