[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.59.0",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "firebase-admin>=7.0.0",
    "google-cloud-firestore>=2.21.0",
    "jinja2>=3.1.6",
    "librosa>=0.11.0",
    "neo4j>=5.28.1",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "starlette>=0.47.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.54.0",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["artifacts*", "tests*"]
